--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 PORT=3000
 #don't forget to replace dbName
-CONNECTION_URL=mongodb+srv://ieee:2uKkqVmFT2eKNE4P@cluster0.h7ivbu4.mongodb.net/ieee
+CONNECTION_URL=mongodb://localhost:27017/IEEE-Dashboard
 SALT_ROUND= 8
 #put your token key here
-SECERT_KEY= token key
+TOKEN_KEY=IEEE
+USER=yousefsalah1242003@gmail.com
+PASS=dcox yxgg sstc jmvv
