--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "postinstall": "node install.js && npm i folder-structure",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,12 +17,18 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "inquirer": "^8.2.0",
+    "cloudinary": "^2.5.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "express-folder-structure": "file:",
+    "inquirer": "^12.3.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.4",
-    "qrcode": "^1.5.4"
+    "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
+    "nodemon": "^3.1.9",
+    "qrcode": "^1.5.4",
+    "randomstring": "^1.3.1"
   }
 }
