update db link ( deployed )

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 #don't forget to replace dbName
-CONNECTION_URL=mongodb://localhost:27017/IEEE-Dashboard
+CONNECTION_URL=mongodb+srv://ieee:2uKkqVmFT2eKNE4P@cluster0.h7ivbu4.mongodb.net/ieee
 SALT_ROUND= 8
 #put your token key here
 TOKEN_KEY=IEEE
