task module --beta

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ SALT_ROUND= 8
 TOKEN_KEY=IEEE
 USER=yousefsalah1242003@gmail.com
 PASS=dcox yxgg sstc jmvv
+
+CLOUD_NAME=dewnalo23
+API_KEY=392216542119114
+API_SECRET=-0EYmb7Jcl0vuvxmaD1ILk8Lc18
